--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@ui5/webcomponents": "^1.15.1",
     "@ui5/webcomponents-fiori": "^1.15.1",
     "@ui5/webcomponents-react": "^1.17.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
